--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  padding: 20px;
   display: block;
   margin: 0 auto;
   font-family: "Press Start 2P", cursive;
@@ -66,21 +66,20 @@ input[type="text"] {
   padding: 10px;
   font-size: 15px;
   color: #c9356c;
+  font-size: 20px;
+  padding: 10px;
 }
 .imagesweather {
-  width: 650px;
-  margin: 8px -10px;
-  position: relative;
-  right: 12px;
+  width: 630px;
+  margin: 8px;
 }
 img {
   border-radius: 40%;
 }
 .weather {
   width: 80px;
-
   border-radius: 50%;
-  margin-left: 24px;
+  margin-top: 10px;
 }
 .weather-app {
   border: 4px solid #c9356c;
@@ -94,7 +93,7 @@ img {
 .greeting {
   padding-top: 20px;
   text-align: center;
-  margin-bottom: 0;
+  margin-bottom: 0px;
 }
 .units {
   font-size: 18px;
@@ -112,15 +111,12 @@ img {
 ul {
   list-style: none;
   display: block;
-  margin-bottom: 20px;
-  margin-left: 20px;
   font-size: 15px;
   margin-top: 25px;
+  padding: 0;
+  text-align: center;
 }
-.city {
-  font-size: 20px;
-  padding: 10px;
-}
+
 a {
   text-decoration: none;
   color: cornflowerblue;
@@ -136,10 +132,14 @@ a {
 .author {
   display: block;
   margin: 0 auto;
-  margin-left: 240px;
+  margin-left: 270px;
   font-size: 10px;
   padding-top: 0;
+  max-width: 700px;
 }
 .bottom-info {
-  margin-left: 20px;
+  text-align: center;
+}
+.temperatures {
+  font-size: 12px;
 }
