--- a/src/styles.css
+++ b/src/styles.css
@@ -74,13 +74,16 @@ input[type="text"] {
   position: relative;
   margin-left: -20px;
   padding: 0;
+  margin-top: -10px;
+  margin-bottom: -10px;
 }
 img {
   border-radius: 40%;
 }
 .weather {
-  width: 80px;
+  width: 100px;
   border-radius: 50%;
+  margin: -10px;
 }
 .weather-app {
   border: 4px solid #c9356c;
